--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
             </button>
         </div>
 
-        <!-- Main content area for game cards -->
-        <main class="game-library mt-12 w-full max-w-screen-md grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6 py-4 flex-grow px-4">
+        <!-- Main content area for game cards. CONFLICTING CLASSES REMOVED HERE. -->
+        <main class="game-library mt-12 w-full grid grid-cols-1 gap-6 py-4 flex-grow px-4">
             <!-- Game Card: 2048 -->
             <div class="game-card flex-shrink-0 w-full h-36 transition-all duration-300 ease-in-out transform hover:scale-105 hover:shadow-xl" data-hover-sound="cardHover" data-game-id="2048">
                 <div class="game-card-content h-full text-center">
@@ -615,4 +615,3 @@
     </script>
 </body>
 </html>
-
